--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,13 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #000;
   text-decoration: inherit;
+  transition: 0.5s;
 }
+
 a:hover {
-  color: #535bf2;
+  opacity: 0.5;
 }
 
 body {
@@ -63,4 +65,16 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+.link-header {
+  color: #FFF !important;
+  text-decoration: inherit;
+  transition: 0.5s;
+  margin: 1rem;
+}
+
+.link-header:hover {
+  opacity: 0.5;
 }
